--- a/templates/work.html
+++ b/templates/work.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../static/img/icon.ico">
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/scrollbar.css">
+    <link rel="stylesheet" href="../static/css/work.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -38,49 +39,52 @@
                             <span class="text nav-text">Inicio</span>
                         </a>
                     </li>
-                    <li class="nav-link">
-                        <a href="{{ url_for('clients') }}"> <!-- Cambia esta línea, para que apunte a tu HTML -->
-                            <i class='bx bx-user icon'></i> <!-- Puedes cambiar el ícono si lo deseas -->
+                    <li class="nav-link" id="client">
+                        <a href="{{ url_for('clients') }}">
+                            <i class='bx bx-user icon'></i>
                             <span class="text nav-text">Clientes</span>
                         </a>
                     </li>
-                    <li class="nav-link">
+                </ul>
+                <!-- Agrupación de Diseño, Aprobación, Elaboración y Entrega -->
+                <hr class="separator"> <!-- Este div agrega espacio y parece separado -->
+                <ul class="menu-links">
+                    <li class="nav-link" id="diseño">
                         <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon'></i>
+                            <i class='bx bx-image-alt icon'></i>
                             <span class="text nav-text">Diseño</span>
                         </a>
                     </li>
-                    <li class="nav-link">
+                    <li class="nav-link" id="aprobacion">
                         <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon'></i>
-                            <span class="text nav-text">Aprobacion</span>
+                            <i class='bx bx-check-circle icon'></i>
+                            <span class="text nav-text">Aprobación</span>
                         </a>
                     </li>
-                    <li class="nav-link">
+                    <li class="nav-link" id="elaboracion">
                         <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon'></i>
-                            <span class="text nav-text">Elaboracion</span>
+                            <i class='bx bx-edit icon'></i>
+                            <span class="text nav-text">Elaboración</span>
                         </a>
                     </li>
-                    <li class="nav-link">
+                    <li class="nav-link" id="entrega">
                         <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon'></i>
+                            <i class='bx bx-send icon'></i>
                             <span class="text nav-text">Entrega</span>
                         </a>
                     </li>
-                </ul>
+                </ul>                
             </div>
             <div class="bottom-content">
-                <li class="">
-                    <a href="{{ url_for('logout') }}">
-                        <i class='bx bx-log-out icon'></i>
-                        <span class="text nav-text">Salir</span>
-                    </a>
-                </li>
                 <li class="">
                     <a href="{{ url_for('settings') }}">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
+                    </a>
+                <li class="">
+                    <a href="{{ url_for('logout') }}">
+                        <i class='bx bx-log-out icon'></i>
+                        <span class="text nav-text">Salir</span>
                     </a>
                 </li>
                 <li class="mode">
@@ -97,21 +101,23 @@
         </div>
     </nav>
 
-    <p style="text-align: center;">{{details[0][1]}}</p>
-    <p style="text-align: center;">{{details[0][0]}}</p>
-    <p style="text-align: center;">{{details[0][2]}}</p>
-    <p style="text-align: center;">{{details[0][3]}}</p>
-    <p style="text-align: center;">{{details[0][4]}}</p>
-    <p style="text-align: center;">{{details[0][5]}}</p>
-    <p style="text-align: center;">{{details[0][6]}}</p>
-    <p style="text-align: center;">{{details[0][7]}}</p>
-    <p style="text-align: center;">{{details[0][8]}}</p>
-    <p style="text-align: center;">{{details[0][9]}}</p>
-    <p style="text-align: center;">{{details[0][10]}}</p>
-    <p style="text-align: center;">{{details[0][11]}}</p>
-    <p style="text-align: center;">{{details[0][12]}}</p>
-    <p style="text-align: center;">{{types}}</p>
-
+    <div class="card">
+        <h2>Detalles</h2>  <!-- Puedes agregar un título a la tarjeta -->
+        <div class="info-box">{{details[0][1]}}</div>
+        <div class="info-box">{{details[0][0]}}</div>
+        <div class="info-box">{{details[0][2]}}</div>
+        <div class="info-box">{{details[0][3]}}</div>
+        <div class="info-box">{{details[0][4]}}</div>
+        <div class="info-box">{{details[0][5]}}</div>
+        <div class="info-box">{{details[0][6]}}</div>
+        <div class="info-box">{{details[0][7]}}</div>
+        <div class="info-box">{{details[0][8]}}</div>
+        <div class="info-box">{{details[0][9]}}</div>
+        <div class="info-box">{{details[0][10]}}</div>
+        <div class="info-box">{{details[0][11]}}</div>
+        <div class="info-box">{{details[0][12]}}</div>
+        <div class="info-box">{{types}}</div>
+    </div>
 
                 
 <div class="confirmation-modal hidden" id="confirmationModal">
