--- a/static/css/clients.css
+++ b/static/css/clients.css
@@ -193,6 +193,12 @@ body.dark .sidebar header .toggle {
     margin-top: 40px;
 }
 
+.separator {
+    border: none; /* Eliminar el estilo por defecto */
+    height: 1px; /* Alto de la línea */
+    background-color: var(--text-color);
+    margin: 10px 0; /* Margen alrededor de la línea */
+}
 
 .sidebar li.search-box {
     border-radius: 6px;
