--- a/templates/settings.html
+++ b/templates/settings.html
@@ -32,30 +32,57 @@
                 </li>
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="../templates/home.html">
+                        <a href="{{ url_for('home') }}">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
                     </li>
-                    <li class="nav-link">
-                        <a href="#">
-                            <i class='bx bx-bar-chart-alt-2 icon'></i>
-                            <span class="text nav-text">Estadísticas</span>
+                    <li class="nav-link" id="client">
+                        <a href="{{ url_for('clients') }}">
+                            <i class='bx bx-user icon'></i>
+                            <span class="text nav-text">Clientes</span>
                         </a>
                     </li>
                 </ul>
+                <!-- Agrupación de Diseño, Aprobación, Elaboración y Entrega -->
+                <hr class="separator"> <!-- Este div agrega espacio y parece separado -->
+                <ul class="menu-links">
+                    <li class="nav-link" id="diseño">
+                        <a href="#">
+                            <i class='bx bx-image-alt icon'></i>
+                            <span class="text nav-text">Diseño</span>
+                        </a>
+                    </li>
+                    <li class="nav-link" id="aprobacion">
+                        <a href="#">
+                            <i class='bx bx-check-circle icon'></i>
+                            <span class="text nav-text">Aprobación</span>
+                        </a>
+                    </li>
+                    <li class="nav-link" id="elaboracion">
+                        <a href="#">
+                            <i class='bx bx-edit icon'></i>
+                            <span class="text nav-text">Elaboración</span>
+                        </a>
+                    </li>
+                    <li class="nav-link" id="entrega">
+                        <a href="#">
+                            <i class='bx bx-send icon'></i>
+                            <span class="text nav-text">Entrega</span>
+                        </a>
+                    </li>
+                </ul>                
             </div>
             <div class="bottom-content">
                 <li class="">
-                    <a href="../templates/index.html">
-                        <i class='bx bx-log-out icon'></i>
-                        <span class="text nav-text">Salir</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="#">
+                    <a href="{{ url_for('settings') }}">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
+                    </a>
+                <li class="">
+                    <a href="{{ url_for('logout') }}">
+                        <i class='bx bx-log-out icon'></i>
+                        <span class="text nav-text">Salir</span>
                     </a>
                 </li>
                 <li class="mode">
