--- a/templates/clients.html
+++ b/templates/clients.html
@@ -33,7 +33,7 @@
                     <i class='bx bx-search icon'></i>
                     <input type="text" placeholder="Buscar..." id="searchInput">
                 </li>
-                <ul class="menu-links">
+                <ul class="menu-links" id="home">
                     <li class="nav-link">
                         <a href="{{ url_for('home') }}">
                             <i class='bx bx-home-alt icon'></i>
