--- a/templates/design.html
+++ b/templates/design.html
@@ -49,7 +49,7 @@
                 <hr class="separator"> <!-- Este div agrega espacio y parece separado -->
                 <ul class="menu-links">
                     <li class="nav-link" id="diseño">
-                        <a href="{{ url_for('design') }}">
+                        <a href="#">
                             <i class='bx bx-image-alt icon'></i>
                             <span class="text nav-text">Diseño</span>
                         </a>
@@ -101,7 +101,7 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Inicio</div>
+            <div class="text">Diseños</div>
             <button class="add-btn" type="button">
                 <span class="button__text">Añadir</span>
                 <span class="button__icon"><svg class="svg" fill="none" height="24" stroke="currentColor"
