--- a/templates/design.html
+++ b/templates/design.html
@@ -49,7 +49,7 @@
                 <hr class="separator"> <!-- Este div agrega espacio y parece separado -->
                 <ul class="menu-links">
                     <li class="nav-link" id="diseño">
-                        <a href="#">
+                        <a href="{{ url_for('design') }}">
                             <i class='bx bx-image-alt icon'></i>
                             <span class="text nav-text">Diseño</span>
                         </a>
