--- a/templates/design.html
+++ b/templates/design.html
@@ -75,7 +75,7 @@
                 </ul>                
             </div>
             <div class="bottom-content">
-                <li class="">
+                <li class="" id="setting">
                     <a href="{{ url_for('settings') }}">
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
@@ -102,200 +102,36 @@
     <section class="home">
         <div class="home-header">
             <div class="text">Diseños</div>
-            <button class="add-btn" type="button">
-                <span class="button__text">Añadir</span>
-                <span class="button__icon"><svg class="svg" fill="none" height="24" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                        width="24" xmlns="http://www.w3.org/2000/svg">
-                        <line x1="12" x2="12" y1="5" y2="19"></line>
-                        <line x1="5" x2="19" y1="12" y2="12"></line>
-                    </svg></span>
-            </button>
         </div>
-        <div class="add-modal hidden">
-            <div class="add-modal-content">
-                <div class="form-section">
-                    <div class="close-button">
-                        <div class="close-icon">
-                            <i class="fas fa-times"></i>
-                        </div>
-                    </div>
-                    <form class="add-form" action="{{ url_for('form') }}" method="post">
-                        <div class="form-group">
-                            <label for="title">Título:</label>
-                            <input type="text" id="title" name="title" required>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="name">Nombre:</label>
-                                <input type="text" id="name" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="surname">Apellido:</label>
-                                <input type="text" id="surname" name="surname" required>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="phone">Teléfono:</label>
-                                <input type="tel" id="phone" name="phone" value=""  required>
-                            </div>
-                            <div class="form-group">
-                                <label for="date">Fecha:</label>
-                                <input type="date" id="date" name="date" value="dd/mm/aaaa" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label>Tipo de trabajo:</label>
-                            <div class="job-type-buttons">
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="1" onchange="updatePreview()"> 
-                                    <span class="custom-checkbox"></span>
-                                    Pendón
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="2" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Vinilo
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="3" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Estructura
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="4" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Valla Publicitaria
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="5" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Presentación
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="6" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Volantes
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="7" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Banderín
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="8" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Camisa
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="9" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    NeoFlex
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="10" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Corte V
-                                </label>
-                                <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="11" onchange="updatePreview()">
-                                    <span class="custom-checkbox"></span>
-                                    Acrílico
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="total-cost">Costo total:</label>
-                                <input type="number" id="total-cost" name="total-cost" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="down-payment">Abono:</label>
-                                <input type="number" id="down-payment" name="down-payment" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="remaining">Restante:</label>
-                                <input type="number" id="remaining" name="remaining" required readonly>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="description">Comentarios:</label>
-                                <textarea id="description" name="description" rows="4" required style="resize: none;"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <label class="custum-file-upload" for="file">Imagen</label>
-                                <div class="form-group upload-box">
-                                    <div class="upload-icon-container">
-                                        <i class="fas fa-upload"></i>
-                                        <span>Subir archivo</span>
-                                        <input type="file" id="file" onchange="previewImage(this)">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <button type="submit" class="submit-btn">Guardar</button>
-                                <button type="reset" class="reset-btn">Restablecer</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="preview-section">
-                    <h3 class="preview-title">Previsualización</h3>
-                    <div class="preview-card-item">
-                        <img id="preview-image" src="" alt="Miniatura">
-                        <h3 class="preview-card-title"></h3>
-                        <p class="preview-card-name-container">
-                            <span class="preview-card-name"></span>
-                            <span class="preview-card-lastname"></span>
-                        </p>
-                        <p class="preview-card-info">
-                            <span class="preview-job-title"></span>
-                            <span class="preview-date"></span>
-                            <span class="preview-phone"><i class="fas fa-phone"></i></span>
-                        </p>
-                        <p class="preview-card-description"></p>
-                        <div class="preview-arrow">
-                            <i class="fas fa-arrow-right card-icon"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal-backdrop hidden"></div>
         <div class="card-list" id="cardList">
         {% for item, item2 in filas %}
-<div class="card-item" data-job-type="designer" style="cursor: pointer;">
-    <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
-        <img src="../static/img/editor.jpg" alt="Card Image">
-        <p class="card-title">{{ item[0] }}</p>
-        <p class="card-name-container">
-            <span class="card-name">{{ item[3] }}</span>
-        </p>
-        <p class="card-info">
-            <span class="job-title">Designer</span>
-            <span class="date">{{ item[1] }}</span>
-            <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
-        </p>
-        <p class="card-description">{{ item2 }}</p>
-        <div class="actions">
-            <div class="arrow">
-                <i class="fas fa-arrow-right card-icon" title="Abrir"></i>
+            <div class="card-item" data-job-type="designer" style="cursor: pointer;">
+                <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
+                    <img src="../static/img/editor.jpg" alt="Card Image">
+                    <p class="card-title">{{ item[0] }}</p>
+                    <p class="card-name-container">
+                        <span class="card-name">{{ item[3] }}</span>
+                    </p>
+                    <p class="card-info">
+                        <span class="job-title">Designer</span>
+                        <span class="date">{{ item[1] }}</span>
+                        <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
+                    </p>
+                    <p class="card-description">{{ item2 }}</p>
+                    <div class="actions">
+                        <div class="arrow">
+                            <i class="fas fa-arrow-right card-icon" title="Abrir"></i>
+                        </div>
+                        <div class="delete" style="cursor: pointer;" onclick="handleDelete(event)">
+                            <i class="fas fa-trash-alt" title="Borrar"></i>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="delete" style="cursor: pointer;" onclick="handleDelete(event)">
-                <i class="fas fa-trash-alt" title="Borrar"></i>
-            </div>
-        </div>
-    </a>
-</div>
         {% endfor %}
 
-        </div>
-                
-<div class="confirmation-modal hidden" id="confirmationModal">
+    </div>          
+    <div class="confirmation-modal hidden" id="confirmationModal">
     <div class="modal-content">
         <h3>¿Estás seguro de que deseas eliminar?</h3>
         <p>Esta acción no se puede deshacer.</p>
@@ -305,8 +141,9 @@
         </div>
     </div>
     </section>
-    <script src="../static/js/home.js"></script>
+    <script src="../static/js/roles.js"></script>
     <script src="../static/js/sidebar.js"></script>
+    <script src="../static/js/home.js"></script>
 </body>
 </html>
 
