changes to view several phases

--- a/templates/home.html
+++ b/templates/home.html
@@ -55,19 +55,19 @@
                         </a>
                     </li>
                     <li class="nav-link" id="aprobacion">
-                        <a href="#">
+                        <a href="{{ url_for('approval') }}">
                             <i class='bx bx-check-circle icon'></i>
                             <span class="text nav-text">Aprobación</span>
                         </a>
                     </li>
                     <li class="nav-link" id="elaboracion">
-                        <a href="#">
+                        <a href="{{ url_for('crafting') }}">
                             <i class='bx bx-edit icon'></i>
                             <span class="text nav-text">Elaboración</span>
                         </a>
                     </li>
                     <li class="nav-link" id="entrega">
-                        <a href="#">
+                        <a href="{{ url_for('ending') }}">
                             <i class='bx bx-send icon'></i>
                             <span class="text nav-text">Entrega</span>
                         </a>
