--- a/static/css/scrollbar.css
+++ b/static/css/scrollbar.css
@@ -6,7 +6,7 @@
 ::-webkit-scrollbar-thumb { background-color: #2f2e31; }
   
   .dark::-webkit-scrollbar-track {
-    background-color: #2f2e31;
+    background-color: #121212;
   }
   
   .dark::-webkit-scrollbar-thumb {
