--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,8 +1,5 @@
 /* ======================================================== BASE ================================================== */
 
-/* Google Font Import - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -52,15 +49,14 @@ body {
 }
 
 body.dark {
-    --body-color: #2f2e31;
-    --sidebar-color: #242526;
+    --body-color: #121212;
+    --sidebar-color: #282828;
     --primary-color: #3a3b3c;
     --primary-color-light: #3a3b3c;
     --toggle-color: #fff;
     --text-color: #ccc;
 }
 
-/* ===== Sidebar ===== */
 /* Sidebar */
 .sidebar {
     position: fixed;
@@ -406,12 +402,16 @@ body.dark .home .text {
     white-space: nowrap;
 }
 
-
-
 .card-list .card-item:hover {
     transform: scale(1.03);
     transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    box-shadow: 0 8px 100px #786efd48;
+    box-shadow: 0 8px 100px #0000002f;
+}
+
+body.dark .card-list .card-item:hover {
+    transform: scale(1.03);
+    transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 0 8px 100px #dadcff25;
 }
 
 .card-list .card-item img {
@@ -515,7 +515,7 @@ body.dark .home .text {
 
 /* Dark Mode Styles */
 body.dark .card-list .card-item {
-    background: #242424;
+    background: #282828;
     color: #fff;
 }
 
@@ -532,21 +532,8 @@ body.dark .card-item .arrow {
 }
 
 body.dark .card-list .card-item:hover .arrow {
-    background: #756fd6;
+    background: #8782e9;
     color: #242526;
-}
-
-
-@media (max-width: 1200px) {
-    .card-list .card-item {
-        padding: 15px;
-    }
-}
-
-@media screen and (max-width: 980px) {
-    .card-list {
-        margin: 0 auto;
-    }
 }
 
 .home-header .add-btn {
@@ -627,7 +614,6 @@ body.dark .home-header .add-btn .button__text {
     padding: 20px;
     width: 80%;
     height: 80%;
-    background-color: #E4E9F7;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -652,7 +638,6 @@ body.dark .home-header .add-btn .button__text {
 
 
 .preview-section .preview-card-item {
-    background: #fff;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
@@ -668,6 +653,7 @@ body.dark .home-header .add-btn .button__text {
     flex-direction: column;
     justify-content: space-between;
 }
+
 
 .preview-card-item .preview-card-description {
     margin-top: 10px;
@@ -691,7 +677,12 @@ body.dark .home-header .add-btn .button__text {
     margin-top: 10px;
 }
 
-
+body.dark .preview-card-item .preview-card-title {
+    color: #d4d4d4;
+    font-size: 1.438rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
 
 .preview-card-item .preview-card-info {
     display: flex;
@@ -700,7 +691,9 @@ body.dark .home-header .add-btn .button__text {
     margin-top: 10px;
 }
 
-
+body.dark .preview-card-item .preview-card-name-container {
+    color: #d4d4d4;
+}
 
 .preview-card-item .preview-job-title,
 .preview-card-item .preview-date,
@@ -804,7 +797,6 @@ body.dark .home-header .add-btn .button__text {
     font-size: 16px;
     position: relative;
     top: 1px;
-    /* Ajusta la posición vertical del icono */
 }
 
 .add-form {
@@ -820,8 +812,17 @@ body.dark .home-header .add-btn .button__text {
 }
 
 .form-group label {
-    font-weight: bold;
+    font-weight: 700;
     margin-bottom: 0.5rem;
+    color: #1f1f1f;
+    font-size: 15px;
+}
+
+body.dark .form-group label {
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    color: #9c9c9c;
+    font-size: 15px;
 }
 
 .form-group input {
@@ -830,6 +831,7 @@ body.dark .home-header .add-btn .button__text {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 1rem;
+    color: #1c1c1c;
 }
 
 .job-type-buttons {
@@ -845,11 +847,10 @@ body.dark .home-header .add-btn .button__text {
     padding: 10px 15px;
     background-color: rgba(221, 221, 221, 0); /* Fondo transparente */
     color: rgb(61, 61, 61); /* Texto transparente */
-    font-size: 13px;
+    font-size: 2px;
     border-radius: 5px; /* Bordes redondeados */
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1); /* Sombra */
     position: relative; /* Para posicionar el checkbox */
     user-select: none;
 }
@@ -867,13 +868,23 @@ body.dark .home-header .add-btn .button__text {
     width: 24px; /* Ancho de la caja */
     height: 24px; /* Alto de la caja */
     border-radius: 5px; /* Bordes redondeados */
-    background-color: #e0e0e0; /* Color de fondo de la checkbox */
+    background-color: #d4d4d4; /* Color de fondo de la checkbox */
+    margin-right: 10px; /* Espacio a la derecha */
+    position: relative; /*Para el checkmark */
+}
+
+body.dark .custom-checkbox {
+    display: inline-block;
+    width: 24px; /* Ancho de la caja */
+    height: 24px; /* Alto de la caja */
+    border-radius: 5px; /* Bordes redondeados */
+    background-color: #696969; /* Color de fondo de la checkbox */
     margin-right: 10px; /* Espacio a la derecha */
     position: relative; /*Para el checkmark */
 }
 
 .job-type-btn input:checked + .custom-checkbox {
-    background-color: #7d75f4; /* Color de fondo al seleccionar */
+    background-color: #757eff; /* Color de fondo al seleccionar */
 }
 
 
@@ -910,7 +921,7 @@ body.dark .home-header .add-btn .button__text {
 }
 
 .reset-btn:hover {
-    background-color: #e64341; /* Color más oscuro al pasar el ratón */
+    background-color: #bb3835; /* Color más oscuro al pasar el ratón */
 }
 
 
@@ -932,6 +943,7 @@ body.dark .home-header .add-btn .button__text {
     border: 1px solid #ccc;
     border-radius: 4px;
     padding: 10px;
+    background-color: transparent;
 }
 
 .form-section {
@@ -939,47 +951,68 @@ body.dark .home-header .add-btn .button__text {
     justify-content: center;
     align-items: center;
     width: 60%;
-    height: 5500px;
-    background-color: #f1f1f1;
     padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    max-height: 90vh;
-    /* Limita la altura máxima de la sección del formulario */
+    background: white;
+    border-radius: 12px; /* Bordes más suaves */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15); /* Sombra más suave para un efecto elevado */
+    max-height: 90vh; 
+    overflow-y: auto; /* Habilitar desplazamiento si es necesario */
+    border: 1px solid #EAEAEA; /* Bordes sutiles */
+    transition: background-color 0.3s, border 0.3s; /* Transiciones suaves */
 }
 
-.form-group.upload-box {
-    margin-top: 7px;
-    width: 400px;
-    height: 110px;
-    border: 2px dashed #ccc;
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: border-color 0.3s;
+/* Modo oscuro */
+body.dark .form-section {
+    background: #1c1c1c; /* Fondo más oscuro para la sección del formulario */
+    border: none; /* Eliminar bordes */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
+}
+body.dark .form-group input,
+body.dark .form-group textarea {
+    background-color: #272727; /* Fondo oscuro para el input */
+    color: #E0E0E0; /* Texto claro */
+    border: 1px solid transparent; /* Sin bordes visibles al principio */
+    border-radius: 5px; /* Bordes redondeados */
+    padding: 0.5rem; /* Espaciado interno */
+    transition: border-color 0.3s, box-shadow 0.3s; /* Transiciones suaves */
 }
 
-.form-group.upload-box:hover {
-    border-color: #7E73F5;
+body.dark .form-group input:focus,
+body.dark .form-group textarea:focus {
+    outline: none; /* Suprime el contorno por defecto */
 }
 
-.upload-icon-container {
+.upload-box {
+    border: 1px dashed #3d3d3d; /* Borde dashed para el área de carga */
+    padding: 20px; /* Espaciado interno */
+    border-radius: 8px; /* Bordes redondeados */
+    transition: border-color 0.3s; /* Transición suave del color del borde */
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #707070;
+    justify-content: center;
+    cursor: pointer; /* Cambia el cursor cuando se pasa por encima */
+}
+
+.upload-box:hover {
+    border-color: var(--primary-color); /* Cambia el color del borde en hover */
+}
+
+.upload-icon-container {
+    text-align: center; /* Centra el icono y el texto */
+    color: var(--text-color); /* Color del texto */
 }
 
 .upload-icon-container i {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 30px; /* Aumentar el tamaño del ícono */
+    margin: 8px; /* Espacio debajo del ícono */
 }
 
 .upload-icon-container span {
-    font-size: 14px;
+    font-size: 12px; /* Tamaño de la fuente del texto */
 }
+
+
 
 .add-modal .submit-btn {
     position: absolute;
@@ -1006,13 +1039,6 @@ body.dark .home-header .add-btn .button__text {
     color: rgb(193, 208, 212)
 }
 
-@media (max-width: 768px) {
-    .add-modal {
-        width: 90%;
-        height: 90%;
-    }
-}
-
 .add-modal-content {
     display: flex;
 }
@@ -1026,7 +1052,19 @@ body.dark .home-header .add-btn .button__text {
 }
 
 .preview-card-item {
-    background: #fff;
+    background: var(--body-color);
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
+    list-style: none;
+    text-decoration: none;
+    border: 2px solid transparent;
+    transition: border 0.5s ease;
+    width: 300px;
+}
+
+body.dark .preview-card-item {
+    background: #282828;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
