--- a/templates/home.html
+++ b/templates/home.html
@@ -225,7 +225,7 @@
                                 <textarea id="description" name="description" rows="4" required style="resize: none;"></textarea>
                             </div>
                             <div class="form-group">
-                                <label class="custum-file-upload" for="file">Imagen</label>
+                                <div class="upload-icon-container" onclick="document.getElementById('file').click();"></div>
                                 <div class="form-group upload-box">
                                     <div class="upload-icon-container">
                                         <i class="fas fa-upload"></i>
