--- a/static/css/work.css
+++ b/static/css/work.css
@@ -18,6 +18,31 @@ body {
     padding-top: 0;
 }
 
+/*BOTON DE REGRESAR*/
+.text {
+    margin-right: auto; /* Para empujar el botón hacia la derecha */
+}
+
+.back-button {
+    display: flex;
+    align-items: center;
+}
+
+.back-btn {
+    display: flex;
+    align-items: center;
+    text-decoration: none; /* Sin subrayado */
+    color: inherit;  /* Para heredar el color del texto */
+    margin-left: 15px; /* Espacio entre el texto y el botón */
+    color: var(--text-color);
+}
+
+.back-btn i {
+    font-size: 2em; /* Tamaño del ícono */
+}
+
+/*BOTON DE REGRESAR*/
+
 /* Estilo general de la tarjeta */
 .card {
     background-color: #ffffff; /* Fondo blanco */
