--- a/templates/Client.html
+++ b/templates/Client.html
@@ -101,8 +101,14 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Recientes</div>
-        </div>
+            <div class="back-button">
+                <a href="javascript:history.back()" class="back-btn">
+                    <i class='bx bx-chevron-left' ></i> <!-- Puedes cambiar el ícono aquí -->
+                </a>
+                <div class="text">Recientes
+                </div>
+            </div>
+        </div>  
         <div class="add-modal hidden">
             <div class="add-modal-content">
                 <div class="form-section">
