--- a/templates/settings.html
+++ b/templates/settings.html
@@ -95,7 +95,8 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Ajustes</div>
+                <div class="text">Ajustes</div>
+            </div>
         </div>
         <div class="form-card" id="registerUser">
             <h3>Registrar Nuevo Usuario</h3>
