--- a/templates/work.html
+++ b/templates/work.html
@@ -100,9 +100,14 @@
     </nav>
     <section class="home">
         <div class="home-header">
-            <div class="text">Detalles</div>
-        </div>
-            <div class="card">
+            <div class="back-button">
+                <a href="javascript:history.back()" class="back-btn">
+                    <i class='bx bx-chevron-left' ></i> <!-- Puedes cambiar el ícono aquí -->
+                </a>
+                <div class="text">Detalles</div>
+            </div>
+        </div>  
+          <div class="card">
                 <h2>{{details[0][0]}}</h2>
                 <div class="info-container">
                     <div class="info-item">
