--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <nav class="sidebar close">
         <header>
@@ -72,7 +74,7 @@
                             <span class="text nav-text">Entrega</span>
                         </a>
                     </li>
-                </ul>                
+                </ul>
             </div>
             <div class="bottom-content">
                 <li class="">
@@ -105,8 +107,8 @@
             <button class="add-btn" type="button">
                 <span class="button__text">Añadir</span>
                 <span class="button__icon"><svg class="svg" fill="none" height="24" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                        width="24" xmlns="http://www.w3.org/2000/svg">
+                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
+                        xmlns="http://www.w3.org/2000/svg">
                         <line x1="12" x2="12" y1="5" y2="19"></line>
                         <line x1="5" x2="19" y1="12" y2="12"></line>
                     </svg></span>
@@ -138,7 +140,7 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="phone">Teléfono:</label>
-                                <input type="tel" id="phone" name="phone" value=""  required>
+                                <input type="tel" id="phone" name="phone" value="" required>
                             </div>
                             <div class="form-group">
                                 <label for="date">Fecha:</label>
@@ -149,57 +151,68 @@
                             <label>Tipo de trabajo:</label>
                             <div class="job-type-buttons">
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="1" onchange="updatePreview()"> 
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="1"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Pendón
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="2" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="2"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Vinilo
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="3" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="3"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Estructura
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="4" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="4"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Valla Publicitaria
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="5" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="5"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Presentación
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="6" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="6"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Volantes
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="7" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="7"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Banderín
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="8" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="8"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Camisa
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="9" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="9"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     NeoFlex
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="10" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="10"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Corte V
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="11" onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="11"
+                                        onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Acrílico
                                 </label>
@@ -222,10 +235,12 @@
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="description">Comentarios:</label>
-                                <textarea id="description" name="description" rows="4" required style="resize: none;"></textarea>
+                                <textarea id="description" name="description" rows="4" required
+                                    style="resize: none;"></textarea>
                             </div>
                             <div class="form-group">
-                                <div class="upload-icon-container" onclick="document.getElementById('file').click();"></div>
+                                <div class="upload-icon-container" onclick="document.getElementById('file').click();">
+                                </div>
                                 <div class="form-group upload-box">
                                     <div class="upload-icon-container">
                                         <i class="fas fa-upload"></i>
@@ -267,10 +282,10 @@
         </div>
         <div class="modal-backdrop hidden"></div>
         <div class="card-list" id="cardList">
-        {% for item, item2 in filas %}
-            <div class="card-item" data-job-type="designer" style="cursor: pointer;">
+            {% for item, item2 in filas %}
+            <div class="card-item" data-job-type="designer" style="cursor: pointer;" data-image="{{ loop.index }}">
                 <a href="{{ url_for('work', user=item[6] )}}" style="text-decoration: none;color: black">
-                    <img src="../static/img/editor.jpg" alt="Card Image">
+                    <img src="../static/img/Editor.png" alt="Card Image" class="card-image">
                     <p class="card-title">{{ item[0] }}</p>
                     <p class="card-name-container">
                         <span class="card-name">{{ item[3] }}</span>
@@ -292,22 +307,22 @@
                     </div>
                 </a>
             </div>
-        {% endfor %}
+            {% endfor %}
 
-        </div>
-                
-<div class="confirmation-modal hidden" id="confirmationModal">
-    <div class="modal-content">
-        <h3>¿Estás seguro de que deseas eliminar?</h3>
-        <p>Esta acción no se puede deshacer.</p>
-        <div class="modal-actions">
-            <button id="confirmDelete" class="confirm-btn">Sí, eliminar</button>
-            <button id="cancelDelete" class="cancel-btn">Cancelar</button>
-        </div>
-    </div>
+            </div>
+            <div class="confirmation-modal hidden" id="confirmationModal">
+            <div class="modal-content">
+                <h3>¿Estás seguro de que deseas eliminar?</h3>
+                <p>Esta acción no se puede deshacer.</p>
+                <div class="modal-actions">
+                    <button id="confirmDelete" class="confirm-btn">Sí, eliminar</button>
+                    <button id="cancelDelete" class="cancel-btn">Cancelar</button>
+                </div>
+            </div>
     </section>
+
     <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
 </body>
-</html>
 
+</html>
